fix alignment of nav image

--- a/client/app/styles/app.less
+++ b/client/app/styles/app.less
@@ -41,7 +41,7 @@ body {
 
   .navbar-fixed-top .navbar-brand-centered .logo {
     position: relative;
-    top: -10px;
+    top: -13px;
     width: 59px;
     height: 45px;
   }
